data/derived/comb/progs/unify/prog3931.ml.out
Characters 100-101:
  List.fold_left f base fs;;
                 ^
Error: This expression has type ('a -> 'b) -> 'a -> 'a -> 'c -> 'b
       but an expression was expected of type ('a -> 'b) -> 'a -> 'a -> 'b
       The type variable 'b occurs inside 'c -> 'b
